<resources>
    <string name="app_name">Quiz App</string>
    <string name="intro">Welcome to the Marvel Quiz on MCU</string>
    <string name="q1">Q.1 ] \'Guardians of the Galaxy\' director James Gunn confirmed via Twitter that the Orb holds which Infinity Stone?</string>
    <string name="c1">CORRECT ANSWER: The Power Stone is one of the six Infinity Stones, the remnant of a singularity that predates the universe. The Power Stone is a powerful weapon capable of granting a person great, cosmic power, but is highly likely to kill any organic beings that touch it. It was used by Eson the Searcher until it was forgotten for millenia in the planet Morag inside the Orb. The Orb containing the Power Stone was coveted by Thanos, who employed the Kree warrior Ronan the Accuser to bring it to him. However, before Ronan obtained the Orb, it was stolen by Star-Lord on Morag, prompting a galaxy-wide hunt that resulted in the Orb being given to the Nova Corps for safe-keeping.</string>
    <string name="q2">Q.2 ] Who voices Jarvis, Iron Man\'s artificially intelligent assistant?</string>
    <string name="c2">CORRECT ANSWER: Paul Bettany is an English actor. He is known for his voice role as J.A.R.V.I.S. and the Vision in the Marvel Cinematic Universe, specifically the films Iron Man (2008), Iron Man 2 (2010), The Avengers (2012), Iron Man 3 (2013), Avengers: Age of Ultron (2015), and Captain America: Civil War (2016).</string>
    <string name="q3">Q.3 ] Who is Loki\'s biological father ?</string>
    <string name="c3">CORRECT ANSWER: Laufey was the king of the Frost Giants of Jotunheim, and the biological father of Loki. He was betrayed and killed by his own son while attempting to start a second war between Jotunheim and Asgard by murdering the Asgardian King Odin.</string>
    <string name="q4">Q.4 ] What\'s Hawkeye\'s real name ?</string>
    <string name="c4">CORRECT ANSWER: Clinton Francis Barton, better known as Hawkeye, is a former special agent of S.H.I.E.L.D., where he worked under the supervision of Phil Coulson. Known for his use of the Bow and Arrow as his primary weapon, Barton became one of S.H.I.E.L.D.\'s best agents and assisted in the recruitment of Black Widow, whom he had a strong friendship with.</string>
    <string name="q5">Q.5 ] I do anything and everything Mr. Stark requires. Including occasionally taking out the trash. Will that be all ? [ Contains only one correct answer ] </string>
    <string name="c5">CORRECT ANSWER: Virginia Pepper Potts is the Chief Executive Officer of Stark Industries. Originally working as Tony Stark\'s personal assistant, she would take care of his schedule and perform any task he wished. During this time, she became good friends with Stark; however, both she and Stark had begun developing romantic feelings for each other. Neither was able to act on these feelings, as they each feared that the other would not accept them.</string>
    <string name="q6">Q.6 ] For about how long was Captain America asleep before being thawed from a deep freeze ?</string>
    <string name="c6">CORRECT ANSWER: From 1943 to 1945, Rogers attacked multiple HYDRA quarters with his team, the Howling Commandos, in an attempt to capture HYDRA\'s leader, the Red Skull, and recover the Tesseract. His famous World War II exploits made him a living legend, and during this time he formed a relationship with SSR agent Peggy Carter. Despite losing his best friend and teammate, Bucky Barnes, during a mission, Rogers carried on to help the Allies win the war, but crashed into the Arctic during his final mission. His close friend Howard Stark spent time looking for his body, to no avail, although Stark managed to locate the Tesseract in the Arctic waters. Rogers spent nearly 70 years encased in ice and trapped in suspended animation, before he was found by S.H.I.E.L.D. in the early 21st century.</string>
    <string name="q7">Q.7 ] Name this mastermind behind the Marvel Cinematic Universe.</string>
    <string name="c7">CORRECT ANSWER: Kevin Feige is an American filmmaker and the President of Production at Marvel Studios. He has a credit in every movie based on a Marvel character since 2000\'s X-Men. He has a producer credit on every Marvel Studios movie to date.He was also interviewed for the documentaries Marvel Studios: Assembling a Universe, Marvel 75 Years: From Pulp to Pop and United We Stand, Divided We Fall: The Making of Captain America: Civil War.</string>
    <string name="q8">Q.8 ] Which of the following two directors shot to fame after the success of Captain America franchise and are even directing infiniry war series as of now ?</string>
    <string name="c8">CORRECT ANSWER: Anthony Russo co-directed Captain America: The Winter Soldier, Captain America: Civil War, Avengers: Infinity War and Avengers 4 with his brother Joe.He also directed the post-credits scene of Ant-Man with Joe.He was interviewed for the documentaries Marvel Studios: Assembling a Universe and United We Stand, Divided We Fall: The Making of Captain America: Civil War.Joseph Joe Russo co-directed Captain America: The Winter Soldier, Captain America: Civil War, Avengers: Infinity War and Avengers 4 with his brother Anthony.Joe Russo also directed the Agent Carter episode Bridge and Tunnel.Under the alias Gozie Agbo, Russo portrayed Doctor Fine in Captain America: The Winter Soldier and Theo Broussard in Captain America: Civil War. He also played the man interviewing Peggy Carter in Captain America: The Winter Soldier.</string>
    <string name="q9">Q.9 ] What was the name of the group of mercenaries who raised Star - Lord ?</string>
    <string name="c9">CORRECT ANSWER: The Ravagers are an interstellar crime syndicate comprising of thieves, smugglers, criminals, bandits, mercenaries, bounty-hunters and pirates. There are nearly one hundred factions of Ravagers around the Galaxy. Each faction of the Ravagers has a captain of its own, leading their operations. The Ravagers seem to have their own religion with their own afterlife. Upon death, Ravagers would be disintegrated and their remains released into space while the ships of other clans released firework-like projections called Colors as seen in the vol.2 of Guardians of Galaxy at the death of Yondu.</string>
    <string name="c10">CORRECT ANSWER: Xandar is the homeworld of the Xandarians, but is also home to many other species as the capital of the Nova Empire with a population of 12 billion. It is located in the Andromeda Galaxy at the Eclipsing Binary Star M31V. Xandar orbits around three suns.Ronan the Accuser and his minions attempted to destroy Xandar using the power of the Orb. However, thanks to a combined effort by the Nova Corps, the Ravagers and the Guardians of the Galaxy, his ship, the Dark Aster, was destroyed, and Ronan was killed.</string>
    <string name="q10">Q.10 ] Nova Prime holds authority over this planet seen in \' Guardians of the Galaxy.\'</string>
    <string name="rem1">Oh dear! You’re not the most sharp-eyed viewer of Marvel’s The Avengers – but don’t let that put you off. Why don’t you watch the Blu-Ray again and make notes on the world’s mightiest superheroes? You’ll beat your old score with ease next time!</string>
    <string name="rem2">Good work, special agent! You’ve nearly got the brainpower of Bruce Banner and Tony Stark, but there’s definitely room for improvement. Make the Avengers proud and tackle a little more training before you take the quiz again. You’re sure to get a higher score the second time around. Good luck!</string>
    <string name="rem3">Congratulations on your superb score! Are you best friends with Captain America, Iron Man and Thor? Well, you should be with all your awesome knowledge of the movie. You’re a Marvel mastermind and a superhero in waiting. Shield could use an agent like you.</string>
    <string name="link">Want some more of this, visit http://www.zimbio.com/trivia/qgl_24rU6uk/100+Question+Marvel+Cinematic+Universe+Quiz to test your mettle even futrther</string>
    <string name="start">Let\'s Begin this fun ride !!!!!</string>
    <string name="warn">You can submit only once</string>
    <string name="suggest">Please select any one of the options</string>
    <string name="warn1">You can\'t go back at this satge</string>
    <string name="quit">Quit</string>
    <string name="share">Share</string>
    <string name="exit">Press again to exit</string>
    <string name="QUIT">Quit</string>
    <string name="asking">Are you sure you want to close this quiz ?</string>
    <string name="affirm">Yes</string>
    <string name="negate">No</string>
    <string name="sharing">Try this new app called Quiz based on MCU. My score is : </string>
    <string name="question">. What\'s yours ????</string>
    <string name="via">Share via</string>
    <string name="ravagers">RAVAGERS</string>
    <string name="kevin">KEVIN FEIGE</string>
    <string name="scorevalue">Your score is : </string>
    <string name="instructions">Read Instructions</string>
    <string name="q1op1">The Space Stone</string>
    <string name="q1op2">The Mind Stone</string>
    <string name="q1op3">The Power Stone</string>
    <string name="q1op4">The Time Stone</string>
    <string name="next">NEXT</string>
    <string name="show_answer">Show answer</string>
    <string name="submit">Submit</string>
    <string name="q10op1">Alderaan</string>
    <string name="q10op2">Hala</string>
    <string name="q10op4">Xandar</string>
    <string name="check_score">Check score</string>
    <string name="q10op3">Midgard</string>
    <string name="q2op1">Simon Pegg</string>
    <string name="q2op2">Ewan Mcgregor</string>
    <string name="q2op3">Paul Bettany</string>
    <string name="q2op4">Eddie Readmayne</string>
    <string name="q3op1">Odin</string>
    <string name="q3op2">Laufey</string>
    <string name="q3op3">Volstagg</string>
    <string name="q3op4">Jotunn</string>
    <string name="q4op1">Barton Carter</string>
    <string name="q4op2">Clint Caulson</string>
    <string name="q4op3">Clint Barton</string>
    <string name="q4op4">Bart Clinton</string>
    <string name="q5op1">Agent Caulson</string>
    <string name="q5op2">Jarvis</string>
    <string name="q5op3">Pepper Potts</string>
    <string name="q5op4">Happy Hogan</string>
    <string name="q6op1">Almost 110 years</string>
    <string name="q6op2">Almost 20 years</string>
    <string name="q6op3">Almost 70 years</string>
    <string name="q6op4">Almost 50 years</string>
    <string name="hint">Enter your answer here</string>
    <string name="q8op4">Bret Ratner</string>
    <string name="q8op3">Anthony Russo</string>
    <string name="q8op2">Jon Favreau</string>
    <string name="q8op1">Joey Russo</string>
    <string name="instruction">INSTRUCTIONS FOR THE QUIZ</string>
    <string name="instruct">1. The Quiz consists of 10 questions.\n\n2. Once submitted your answer you can\'t go back to previous question.\n\n3. Remember to first Submit the answer and then press the Next Question button.\n\n4. Each question carries 1 mark.\n\n5. You can view the answer instantly after 1st attempt(right/wrong) by clicking Show Answer button.</string>
</resources>
