<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grad2"
    android:fillViewport="true"
    tools:context="com.example.android.quizapp.ques2">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/ans2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/ans_mgleft"
            android:layout_marginRight="@dimen/ans_mgleft"
            android:layout_marginTop="@dimen/ans_mgTop"
            android:text="@string/c2"
            android:textColor="@color/black"
            android:textSize="@dimen/ans_size"
            android:visibility="invisible" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/quest_mgleft"
                android:layout_marginRight="@dimen/quest_mgleft"
                android:layout_marginTop="@dimen/quest_mgleft"
                android:text="@string/q2"
                android:textSize="@dimen/textsize" />

            <ImageView
                android:id="@+id/img2"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/img_height"
                android:layout_marginTop="@dimen/btnwidth"
                android:src="@drawable/q2"
                android:visibility="visible" />

            <RadioGroup
                android:id="@+id/radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/op1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/quest_mgleft"
                    android:paddingLeft="@dimen/opt_padding"
                    android:text="@string/q2op1" />

                <RadioButton
                    android:id="@+id/op2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/quest_mgleft"
                    android:paddingLeft="@dimen/opt_padding"
                    android:text="@string/q2op2" />

                <RadioButton
                    android:id="@+id/op3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/quest_mgleft"
                    android:paddingLeft="@dimen/opt_padding"
                    android:text="@string/q2op3" />

                <RadioButton
                    android:id="@+id/op4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/quest_mgleft"
                    android:layout_marginLeft="@dimen/quest_mgleft"
                    android:paddingLeft="@dimen/opt_padding"
                    android:text="@string/q2op4" />
            </RadioGroup>

        </LinearLayout>

        <Button
            android:id="@+id/q3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/rnd"
            android:onClick="page3"
            android:text="@string/next" />

        <Button
            android:id="@+id/show2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/rnd"
            android:onClick="ans2"
            android:text="@string/show_answer" />

        <Button
            android:id="@+id/sub2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginLeft="@dimen/gifmargin"
            android:layout_toRightOf="@id/show2"
            android:background="@color/pink"
            android:onClick="answer2"
            android:text="@string/submit"
            android:textColor="@color/violet" />

        <ImageView
            android:id="@+id/appreciate"
            android:layout_width="@dimen/corneradius"
            android:layout_height="wrap_content"
            android:layout_above="@id/q3"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/quest_mgleft"
            android:src="@drawable/claps1"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/negate"
            android:layout_width="@dimen/corneradius"
            android:layout_height="@dimen/corneradius"
            android:layout_above="@id/q3"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/quest_mgleft"
            android:src="@drawable/wrong"
            android:visibility="invisible" />

    </RelativeLayout>
</ScrollView>